--- a/src/style.css
+++ b/src/style.css
@@ -9,12 +9,13 @@ body {
     font-size: 16px;
     background-color: #000000;
     color: #ffffff;
+    overflow-x: hidden;
 }
 
 .container {
     max-width: 1450px;
     margin: 0 auto;
-    padding: 0 30px;
+    padding: 0 50px;
 }
 
 .btn {
@@ -40,4 +41,53 @@ body {
 .btn-dark {
     color: #ffffff;
     background-color: #3b3b3bd9
+}
+
+.actions {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.actions .btn {
+    margin: 15px 0;
+    width: 150px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    font-size: 1.25rem;
+}
+
+.actions .btn:nth-of-type(1) {
+    margin-right: 10px;
+}
+
+@media (max-width: 478px) {
+
+    .container {
+        padding: 0 20px;
+    }
+
+    .actions {
+        justify-content: center;
+        flex-flow: column;
+        align-items: center;
+        margin: 10px 0;
+    }
+
+    .actions .btn {
+        margin: 5px 0;
+    }
+
+    .actions .btn {
+        width: 100%;
+        height: 40px;
+        font-size: 1rem;
+    }
+    
+    .actions .btn:nth-of-type(1) {
+        margin-right: 0;
+    }
+
 }
