--- a/src/components/content/styles/contentGrid.css
+++ b/src/components/content/styles/contentGrid.css
@@ -1,12 +1,12 @@
 .content-column {
-    flex-basis: 250px;
     padding-top: 15px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .content-column .card {
-    flex-basis: 150px;
+    flex-basis: 350px;
     flex-grow: 1;
     width: 100%;
     margin-bottom: 15px;
@@ -15,6 +15,12 @@
     text-decoration: none;
     box-shadow: 0 2px 5px 0 #222222;
     border-radius: 5px;
+    margin: 10px;
+    transition: .3s;
+}
+
+.content-column .card:hover {
+    opacity: 75%;
 }
 
 .content-column .card .title {
@@ -50,7 +56,7 @@
     border-top-right-radius: 5px;
     object-fit: cover;
     width: 100%;
-    height: 200px;
+    height: 300px;
 }
 
 .content-column h2 {
@@ -59,18 +65,4 @@
 
 .content-column h3 {
     font-size: 0.70rem;
-}
-
-@media (max-width: 1050px) {
-
-    .content-column {
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
-
-    .content-column .card {
-        flex-basis: 250px;
-        margin: 10px;
-    }
-
 }
