--- a/src/pages/styles/view.css
+++ b/src/pages/styles/view.css
@@ -1,7 +1,7 @@
 .view-page {
-    display: flex;
-    flex-direction: row;
-    min-height: 1000px;
+    /* display: flex;
+    flex-direction: row; */
+    /* min-height: 1000px; */
     padding-bottom: 35px;
 }
 
