--- a/src/components/content/styles/playerView.css
+++ b/src/components/content/styles/playerView.css
@@ -6,7 +6,7 @@
     padding-bottom: 150px;
 }
 
-.player-view .placeholder {
+.player-view .video-wrapper {
     border-radius: 5px;
     background-color: #222222;
     box-shadow: 0 2px 5px 0 #222222;
@@ -15,48 +15,67 @@
     height: 500px;
 }
 
+.player-view .video-wrapper iframe {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+}
+
 .view-info {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    margin-top: 25px;
+}
+
+.view-info .title {
+    max-width: 600px;
+}
+
+.view-info .title h1 {
+    font-size: 3rem;
+}
+
+.view-info .title h3 {
+    font-size: 1.5rem;
+    margin: 25px 0;
+}
+
+.view-info .title p {
+    font-size: 1rem;
+    margin-top: 15px;
 }
 
 .view-info .details {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
+    flex-basis: 200px;
+    text-align: end;
     font-size: 0.85rem;
-    margin-top: 15px;
 }
 
 .view-info h2 {
     font-size: 1rem;
-    margin-top: 15px;
+    margin-bottom: 15px;
     text-align: right;
     opacity: 85%;
 }
 
 .view-info .details h3 {
+    margin-bottom: 15px;
     font-size: 1rem;
     opacity: 75%;
 }
 
-.view-info h3:nth-of-type(2) {
+.view-info .details a {
+    color: #ffffff;
+    opacity: 75%;
+    font-size: 1rem;
+    margin: 15px 0;
+    font-weight: 600;
+}
+
+.view-info h3.is-edult {
     border: 2px solid #ffffffbf;
     border-radius: 5px;
     padding: 2px 5px;
-}
-
-.view-info .details span {
-    height: 20px;
-    width: 2px;
-    margin: 0 10px;
-    background: #ffffffbf;
-}
-
-.view-info h1 {
-    font-size: 3rem;
-    margin: 25px 0;
 }
 
 .view-info p {
@@ -66,17 +85,25 @@
     overflow: hidden;
 }
 
-@media (max-width: 678px) {
+@media (max-width: 990px) {
 
     .view-info {
         flex-direction: column;
         justify-content: center;
+        text-align: center;
+        align-items: center;
     }
 
-    .view-info h1 {
+    .view-info .title h1 {
         font-size: 2rem;
     }
-    .view-info h2 {
+
+    .view-info .details {
+        flex-basis: auto;
+        text-align: center;
+    }
+
+    .view-info .details h2 {
         font-size: 0.8rem;
         opacity: 75%;
         text-align: center;
@@ -86,4 +113,5 @@
         font-size: 0.8rem;
         opacity: 75%;
     }
+
 }
