--- a/src/components/common/styles/header.css
+++ b/src/components/common/styles/header.css
@@ -30,6 +30,8 @@ header .img-wrapper .concord-img-gradient {
     right: 0;
     left: 0;
     position: absolute;
+    margin: 0 auto;
+    max-width: 1450px;
     background: rgba(0,0,0,.4);
     background-image: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 50%, rgba(0,0,0,1) 100%);
 }
