--- a/src/components/content/styles/contentRow.css
+++ b/src/components/content/styles/contentRow.css
@@ -21,7 +21,6 @@
     user-select: none;
     transition: .3s;
 }
-
 .content-row .card:hover {
     opacity: 75%;
 }
@@ -55,4 +54,10 @@
     background-color: #000000;
     border-radius: 10px;
     border: 2px solid #222;
+}
+
+@media (max-width: 786px) {
+    .content-row .cards {
+        overscroll-behavior: unset;
+    }
 }
