--- a/src/components/content/styles/contentTrending.css
+++ b/src/components/content/styles/contentTrending.css
@@ -5,22 +5,47 @@
     width: 100%;
     height: 450px;
     position: relative;
-    border-radius: 5px;
     padding: 30px 40px;
-    box-shadow: 0 2px 5px 0 #222222;
     overflow: hidden;
-    background-repeat: no-repeat!important;
-    background-position: top!important;
-    background-size: cover!important;
+    margin: 55px 0;
+}
+
+.content-trending .img-wrapper {
+    position: absolute;
+    top: 0;
+    z-index: 0;
+    overflow: hidden;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.content-trending .img-wrapper img {
+    width: 100%;
+    object-fit: cover;
+    display: flex;
+    max-width: 1450px;
+    object-position: center;
+    margin: 0 auto;
+}
+
+.content-trending .img-wrapper .concord-img-gradient {
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    position: absolute;
+    background: linear-gradient(90deg, rgba(0,0,0, 1) 0%, rgba(0,0,0,.5) 50%, rgba(0,0,0, 1) 100%);
 }
 
 .content-trending .info {
     max-width: 500px;
+    z-index: 1;
 }
 
 .content-trending .info h6 {
     font-size: 0.85rem;
-    font-weight: 400;
+    font-weight: 600;
     margin-bottom: 15px;
 }
 
@@ -43,7 +68,6 @@
 
 .content-trending .info .details h3.is-edult {
     border: 2px solid #ffffffbf;
-    border-radius: 5px;
     padding: 2px 5px;
 }
 
