--- a/src/components/content/styles/playerView.css
+++ b/src/components/content/styles/playerView.css
@@ -1,34 +1,33 @@
 .player-view {
-    display: flex;
-    flex-direction: column;
     width: 100%;
-    padding-top: 15px;
-    padding-bottom: 150px;
+    height: 500px;
 }
 
 .player-view .video-wrapper {
     border-radius: 5px;
     background-color: #222222;
-    /* box-shadow: 0 2px 5px 0 #222222; */
     width: 100%;
-    margin-bottom: 30px;
     height: 500px;
 }
 
 .player-view .video-wrapper iframe {
     width: 100%;
-    height: 100%;
+    height: inherit;
     border-radius: 5px;
+    height: 500px;
 }
 
 .view-info {
     display: flex;
     justify-content: space-between;
-    margin-top: 25px;
+    padding: 45px 25px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    box-shadow: 0 2px 5px 0 #222222;
 }
 
 .view-info .title {
-    max-width: 600px;
+    flex-basis: 600px;
 }
 
 .view-info .title h1 {
@@ -46,7 +45,7 @@
 }
 
 .view-info .details {
-    width: 100%;
+    flex-basis: 400px;
     text-align: end;
     font-size: 0.85rem;
 }
@@ -62,6 +61,7 @@
     margin-bottom: 15px;
     font-size: 1rem;
     opacity: 75%;
+    font-weight: 400;
 }
 
 .view-info .details a {
@@ -92,6 +92,10 @@
         justify-content: center;
         text-align: center;
         align-items: center;
+    }
+
+    .view-info .title {
+        flex-basis: auto;
     }
 
     .view-info .title h1 {
