--- a/src/components/content/styles/contentTrending.css
+++ b/src/components/content/styles/contentTrending.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: end;
     width: 100%;
-    height: 450px;
+    height: 750px;
     position: relative;
     padding: 30px 40px;
     overflow: hidden;
@@ -35,7 +35,14 @@
     right: 0;
     left: 0;
     position: absolute;
-    background: linear-gradient(90deg, rgba(0,0,0, 1) 0%, rgba(0,0,0,.5) 50%, rgba(0,0,0, 1) 100%);
+}
+
+.concord-img-gradient.g-90 {
+    background: linear-gradient(90deg, rgba(0,0,0, 1) 0%, rgba(0,0,0, 0) 35%,rgba(0,0,0, 0) 65%, rgba(0,0,0, 1) 100%);
+}
+
+.concord-img-gradient.g-180 {
+    background: linear-gradient(180deg, rgba(0,0,0, 1) 0%, rgba(0,0,0, 1) 5%,rgba(0,0,0, 0) 20%,rgba(0,0,0, 0) 80%,rgba(0,0,0, 1) 90%, rgba(0,0,0, 1) 100%);
 }
 
 .content-trending .info {
