--- a/src/components/content/styles/videoRow.css
+++ b/src/components/content/styles/videoRow.css
@@ -43,6 +43,9 @@
     height: 100px;
     padding: 15px;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @media (max-width: 768px) {
