--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,7 @@ img {
 }
 
 .btn {
+    border: none;
     padding: 7px 17px;
     line-height: normal;
     border-radius: 5px;
@@ -72,6 +73,28 @@ img {
 
 .actions .btn:nth-of-type(1) {
     margin-right: 10px;
+}
+
+.loading {
+    font-size: 25px;
+    opacity: 0;
+    animation-name: opacity;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    margin-top: 100px;
+    margin-bottom: 200px;
+}
+
+@keyframes opacity {
+    0% {
+        opacity: 25%;
+    }
+    50% {
+        opacity: 80%;
+    }
+    100% {
+        opacity: 25%;
+    }
 }
 
 @media (max-width: 478px) {
